--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@mui/x-tree-view": "^8.5.2",
     "diff": "^8.0.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
