--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "diff": "^8.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
