--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^7.1.1",
     "@mui/x-tree-view": "^8.5.2",
     "diff": "^8.0.2",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-toastify": "^11.0.5",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/lodash": "^4.17.19",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react-swc": "^3.10.1",
