moving previous README content to TODO, fill out README, create LICENSE, set engines and packageManager values

--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.1"
-  }
+  },
+  "engines": {
+    "node": "20.13.1"
+  },
+  "packageManager": "pnpm@10.11.1"
 }
